# bws5dk_DS5111su24_lab_01

./: .gitignore  NOTES.md  README.md  get_the_books.sh  makefile  pylintrc  pyproject.toml  requirements.txt  test_books.txt  testing_notebook.ipynb
.github/workflows/: validations.yml
books/: book_texts.txt  get_the_books.sh  makefile  tokenizers.py
books/.github/workflows/: validations.yml
books/tests/: test_cleantext.py  test_count_words.py  test_tokenizer.py  testing_notebook.ipynb
books/tests/test_books/: pg10031.txt  pg17192.txt
src/bws5dk/: __init__.py  tokenizers.py
test_books/: pg1063.txt  pg14082.txt  pg932.txt
test_integrations/: test_integrations.py
tests/: test_cleantext.py  test_count_words.py  test_tokenizer.py  testing_notebook.ipynb
