[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vinylrishi"
version = "0.0.1"
authors = [
  { name="vinylrishi", email="bws5dk@virginia.edu" },
]
description = "Installable text tokeninzer package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vinylrishi/bws5dk_DS5111su24_lab_01"
Issues = "https://github.com/vinylrishi/bws5dk_DS5111su24_lab_01"
